<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android-Use</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Chat strings -->
    <string name="empty_chat_message">Ask me to automate tasks on your device</string>
    <string name="hint_message">Ask anything...</string>
    <string name="send_button">Send</string>

    <!-- Settings strings -->
    <string name="settings_upgrade_pro">Upgrade to Pro</string>
    <string name="settings_data_controls">Data Controls</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_about">About</string>
    <string name="settings_sign_out">Sign out</string>

    <!-- Accessibility Service -->
    <string name="accessibility_service_description">Android-Use uses Accessibility Service to automate actions on your device. This allows the app to click, swipe, type text, and navigate through apps on your behalf.</string>
    <string name="accessibility_permission_required">Accessibility permission required</string>
    <string name="accessibility_permission_explanation">Android-Use needs accessibility permission to automate tasks on your device</string>
    <string name="open_settings">Open Settings</string>
    <string name="later">Later</string>
    <string name="accessibility_service_label">Android-Use Accessibility Service</string>
</resources>