<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/permissionsFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yogen.Android_Use.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yogen.Android_Use.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.yogen.Android_Use.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/permissionsFragment"
        android:name="com.yogen.Android_Use.ui.permissions.PermissionsFragment"
        android:label="Permissions"
        tools:layout="@layout/fragment_permissions">
        <action
            android:id="@+id/action_permissionsFragment_to_chatFragment"
            app:destination="@id/nav_chat"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.yogen.Android_Use.ui.chat.ChatFragment"
        android:label="Android-Use"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.yogen.Android_Use.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>